<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light_background"
    tools:context=".MainActivity"
    android:id="@+id/rootLayout">


    <EditText
        android:id="@+id/editText"
        android:layout_width="346dp"
        android:layout_height="90dp"
        android:background="@drawable/round_edittext_light"
        android:inputType="textMultiLine"
        android:padding="12dp"
        android:text="@string/editText1"
        android:textColor="#000000"
        android:textSize="25sp"
        android:scrollbars="vertical"
        android:lines="2"
        android:focusable="false"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="225dp" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:orientation="vertical">

        <Button
            android:id="@+id/delete"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="@dimen/layout_width"
            android:layout_height="@dimen/layout_height"
            android:layout_margin="15dp"
            android:background="@drawable/round_corner_white"
            android:text="@string/delete"
            android:textColor="#000000"
            android:textSize="34sp"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/equal"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/round_corner_white"
            android:text="@string/equal"
            android:textColor="#000000"
            android:textSize="34sp"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:layout_rowSpan="2"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/plus"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="@dimen/layout_width"
            android:layout_height="@dimen/layout_height"
            android:layout_margin="15dp"
            android:background="@drawable/round_corner_white"
            android:text="@string/plus"
            android:textColor="#000000"
            android:textSize="34sp"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/minus"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="@dimen/layout_width"
            android:layout_height="@dimen/layout_height"
            android:layout_margin="15dp"
            android:background="@drawable/round_corner_white"
            android:text="@string/minus"
            android:textColor="#000000"
            android:textSize="34sp"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/multiplication"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="@dimen/layout_width"
            android:layout_height="@dimen/layout_height"
            android:layout_margin="15dp"
            android:background="@drawable/round_corner_white"
            android:text="@string/multiplication"
            android:textColor="#000000"
            android:textSize="34sp"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/division"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="@dimen/layout_width"
            android:layout_height="@dimen/layout_height"
            android:layout_margin="15dp"
            android:background="@drawable/round_corner_white"
            android:text="@string/division"
            android:textColor="#000000"
            android:textSize="34sp"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/C"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="@dimen/layout_width"
            android:layout_height="@dimen/layout_height"
            android:layout_margin="15dp"
            android:background="@drawable/round_corner_white"
            android:text="@string/C"
            android:textColor="#000000"
            android:textSize="34sp"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/one"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="@dimen/layout_width"
            android:layout_height="@dimen/layout_height"
            android:layout_margin="15dp"
            android:background="@drawable/round_corner_white"
            android:text="@string/one"
            android:textColor="#000000"
            android:textSize="34sp"
            app:layout_column="1"
            app:layout_row="0" />
    </androidx.gridlayout.widget.GridLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <ImageButton
        android:id="@+id/mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#00000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dark_mode_black_36dp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/round_textview"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/guideline3" />

    <TextView
        android:id="@+id/summand"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/round_textview"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/addend"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/round_textview"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/result"
        app:layout_constraintStart_toEndOf="@+id/operator" />

    <TextView
        android:id="@+id/operator"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="40dp"
        android:text="@string/Operator"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintStart_toEndOf="@+id/summand" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="58dp"
        android:layout_height="93dp"
        app:srcCompat="@drawable/drawing"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="225dp" />


</androidx.constraintlayout.widget.ConstraintLayout>